<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="404dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="701dp"
                    android:layout_height="313dp"
                    android:contentDescription="@string/top"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.504"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/top_background" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="260dp"
                    android:layout_height="216dp"
                    android:layout_marginBottom="4dp"
                    android:contentDescription="@string/top"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.413"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/logo1" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#0757F6"
                android:textAlignment="center"
                android:text="@string/welcome_to_n_wp_420_channel"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/download_all_android_and_wordpress_navailable_ui_designs"
                android:textSize="20sp"
                android:textColor="#0757F6"
                android:layout_marginTop="16dp"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:textAlignment="center"
                android:text="@string/log_in"
                android:background="@drawable/blue_btn_background"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                />
            <Button
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:textAlignment="center"
                android:text="@string/sign_up"
                android:background="@drawable/blue_btn_background"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>