<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="450dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="701dp"
                    android:layout_height="313dp"
                    android:contentDescription="@string/top"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.504"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/top_background" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="266dp"
                    android:layout_height="248dp"
                    android:layout_marginBottom="24dp"
                    android:contentDescription="@string/top"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/logo3" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_to_your_account"
                android:textAlignment="center"
                android:textColor="#0757F6"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email2"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/grey_edt_background"
                android:ems="10"
                android:hint="@string/enter_your_name"
                android:importantForAutofill="no"
                android:inputType="textAutoCorrect|textPersonName"
                android:padding="8dp"
                android:textColorHint="#636363"
                android:textSize="18sp"
                tools:ignore="TextFields,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/grey_edt_background"
                android:ems="10"
                android:hint="@string/enter_your_email"
                android:importantForAutofill="no"
                android:inputType="textAutoCorrect|textPersonName"
                android:padding="8dp"
                android:textColorHint="#636363"
                android:textSize="18sp"
                tools:ignore="TextFields,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/grey_edt_background"
                android:ems="10"
                android:hint="@string/enter_your_password"
                android:importantForAutofill="no"
                android:inputType="textVisiblePassword|textPersonName|numberPassword"
                android:padding="16dp"
                android:textColorHint="#636363"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />

            <Button
                android:id="@+id/sign"

                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:textAlignment="center"
                android:text="@string/sign_in"
                android:background="@drawable/blue_btn_background"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>